--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -1,8 +1,8 @@
 .card {
     width: 450px;
-    height: auto; 
+    height: 400px; 
     margin: 10px auto; 
-    border: 1px solid #ccc;
+    border: 3px solid;
     background-color: #000;
     color: #fff;
     border-radius: 8px;
@@ -37,7 +37,7 @@ h2 {
 .icons {
     display: flex;
     justify-content: space-around;
-    margin: 20px;    
+    margin: 20px; 
 }
 
 .icon {
